android: don't crash if no storage is available

https://bugzilla.gnome.org/show_bug.cgi?id=744775